# vilib

./: .gitignore  CHANGELOG.md  DESCRIPTION.rst  README.md  install.py  install_ubuntu.py  pyproject.toml  setup.py  tflite_runtime-2.1.0.post1-cp37-cp37m-linux_armv7l.whl  tflite_runtime-2.5.0.post1-cp38-cp38-linux_armv7l.whl  tflite_runtime-2.5.0.post1-cp39-cp39-linux_armv7l.whl  ubuntu.md  vilib说明文档.md
docs/source/: conf.py  example.rst  index.rst  install_vilib.rst  py_color_detection.rst  py_display.rst  py_face_detection.rst  py_hand_detection.rst  py_image_classification.rst  py_pose_detection.rst  py_qr_code_read.rst  py_recode_video.rst  py_take_photo.rst
examples/: color_detect.py  controls.py  display.py  face_detect.py  face_train.py  gesture_detection.py  hands_detection.py  hsv_threshold_analyzer.py  image_classification.py  import_takes.py  objects_detection.py  pose_detection.py  qr_coder_read.py  qrcode_making.py  qrcode_read.py  recode_video.py  record_video.py  take_photo.py  traffic_sign_detect.py
test/: gpu_test.py
vilib/: __init__.py  color_detection.py  face.py  face_detection.py  gesture_detection.py  hands_detection.py  image_classification.py  mediapipe_object_detection.py  objects_detection.py  pose_detection.py  qrcode_recognition.py  traffic_sign_detection.py  utils.py  version.py  vilib.py  vilib_sf.py  web_display.py
vilib.egg-info/: requires.txt
workspace/: 3bak_ges_200_dr0.2.tflite  traffic_sign_150_dr0.2.tflite  traffic_sign_150_dr0.2_labels.txt
